--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="dark-overlay">
         <nav class="navbar navbar-expand-md navbar-dark  bg-info">
-          <a class="navbar-brand" href="FashionCare.html">fashionCare</a>
+          <a class="navbar-brand" href="index.html">fashionCare</a>
           <button class="navbar-toggler" type="button" name="button" data-toggle="collapse" data-target="#fcnav">
             <span class="navbar-toggler-icon"></span>
           </button>
