--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="dark-overlay">
         <nav class="navbar navbar-expand-md navbar-dark  bg-info">
-          <a class="navbar-brand" href="index.html">fashionCare</a>
+          <a class="navbar-brand" href="FashionCare.html">fashionCare</a>
           <button class="navbar-toggler" type="button" name="button" data-toggle="collapse" data-target="#fcnav">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -60,11 +60,12 @@
             <div class="display-none col-md-12">
               <div class="d-flex">
                 <div class="align-self-start p-4">
+
                   <i class="fas fa-check align-self-start"></i>
                 </div>
                 <div class="p-4">
-                  <p class="align-self-end">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                  <p class="align-self-end">The objective is to help shoppers get to what they want
+                    faster and without running into unnecessary complexity that can clog up the path to purchase.</p>
                 </div>
               </div>
               <div class="d-flex">
@@ -72,8 +73,7 @@
                   <i class="fas fa-check align-self-start"></i>
                 </div>
                 <div class="p-4">
-                  <p class="align-self-end">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                  <p class="align-self-end">What’s better than having customers bookmark items they want and will most likely buy in the future? </p>
                 </div>
               </div>
               <div class="d-flex">
@@ -81,8 +81,7 @@
                   <i class="fas fa-check align-self-start"></i>
                 </div>
                 <div class="p-4">
-                  <p class="align-self-end">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                  <p class="align-self-end">An additional information section details frequently asked information, which establishes credibility and builds confidence with the buyer.</p>
                 </div>
               </div>
             </div>
@@ -121,8 +120,9 @@
 
   <section id="Products">
     <h1>Products</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p>A product is something made in a factory; a brand is something that is bought by the customer.
+      A product can be copied by a competitor; a brand is unique.
+      A product can be quickly outdated; a successful brand is timeless.</p>
     <button class="btn btn-outline-light" data-toggle="collapse" data-target="#allproducts" type="button" name="button">
       View Categories</button>
     <div class="collapse" id="allproducts">
@@ -173,9 +173,14 @@
   <section id="AboutUs">
     <div class="about">
       <h1 style="color: black">About Us</h1>
-      <p class="gray-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+      <p class="gray-paragraph">Welcome to Fashion Care, your number one source for all things including shoes, shirts,
+        trousers and much more. We're dedicated to giving you the very best of our products,
+        with a focus on dependability, customer service and uniqueness.
+        Founded in 2020 by Muhammad Hamza Faisal, Fashion Care has come a long way
+        from its beginnings in a home. When Hamza first started out, his passion for providing
+        the best wardrobe for his fellows who drove him to do intense research and gave
+        him the impetus to turn hard work and inspiration into to a booming online store.
+        We now serve customers all over Asia, and are thrilled to be a part of the quirky wing of the fashion industry.</p>
     </div>
   </section>
 
@@ -183,43 +188,41 @@
   <section id="team">
     <div class="viewteam">
       <h1>Our Team</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Everyone in our team has their own individual core competencies and strengths.
+        We don't keep this to ourselves, but share it with all colleagues.
+        In this way we can constantly learn from one another and thus also provide
+        the best possible support for our customers.
+        Take a look behind the scenes so you can find out who works at PS Marketing</p>
       <button class="btn btn-outline-light" data-toggle="collapse" data-target="#collapse-team" type="button" name="button">Show Team Members</button>
     </div>
     <div class="collapse container" id="collapse-team">
       <div class="row justify-content-center">
-        <div class="team-column col-lg-5 col-md-6">
-          <div class="card team-card">
-            <div class="card-body">
-              <img src="Team-pictures/Kashif.png" alt="lady-profile" class="team-picture">
-              <h2>Kashif Khan<span class="badge badge-team"><i class="checkicon far fa-check-circle"></i></span></h2>
-              <h5>Founder & CEO</h5>
-              <p class="gray-paragraph">I am Founder & CEO of fashionCare. We provide great opportunity for those students who need special attention.</p>
-            </div>
-            <div class="card-footer bg-info">
-              <a href="https://www.facebook.com/kashifkhanits"><i class="fab fasocialIcons fa-facebook"></i></a>
-              <a href="https://twitter.com/kashifkhanits"><i class="fab fasocialIcons fa-twitter"></i></a>
-              <a href="https://www.instagram.com/Kashifkhanits"><i class="fab fasocialIcons fa-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/kashif-khan-8b3144170"><i class="fab fasocialIcons fa-linkedin"></i></a>
-              <a href="mailto:Kashifkhanits@gmail.com"> <i class="far fasocialIcons fa-envelope"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row justify-content-center">
 
         <div class="team-column col-lg-4 col-md-6">
           <div class="card team-card">
             <div class="card-body">
-              <img src="Team-pictures/Komal.png" alt="lady-profile" class="team-picture">
-              <h2>Komal Zia<span class="badge badge-team"><i class="checkicon far fa-check-circle"></i></span></h2>
-              <h5>HR manager</h5>
-              <p class="gray-paragraph">I am HR Manager. My responsibility is to shape and maintain organizational culture. Responsible for creating and managing a strong team.</p>
+              <img src="Team-pictures/Hamza.png" alt="lady-profile" class="team-picture">
+              <h2>Hamza Faisal</h2>
+              <h5>Software engineer</h5>
+              <p class="gray-paragraph">When your business was just starting out, you probably found it easy to create a website and then just let it sit.</p>
             </div>
             <div class="card-footer bg-info">
-              <a href="mailto:Komalzia19@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
+              <a href="https://www.facebook.com/hamza.faisal.1232"><i class="fab fasocialIcons fa-facebook"></i></a>
+              <a href="https://www.instagram.com/hamza.faisal_786?r=nametag"><i class="fab fasocialIcons fa-instagram"></i></a>
+              <a href="mailto:hamza.faisal78642@gmail.com"> <i class="far fasocialIcons fa-envelope"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="team-column col-lg-4 col-md-6">
+          <div class="card team-card">
+            <div class="card-body">
+              <img src="Team-pictures/Mahnoor.png" alt="lady-profile" class="team-picture">
+              <h2>Mahnoor Tariq</h2>
+              <h5>General manager</h5>
+              <p class="gray-paragraph">The first person your ecommerce store should have in place is a general manager. The main duties are, all work together to keep the business running smoothly. </p>
+            </div>
+            <div class="card-footer bg-info">
+              <a href="mailto:carefashion68@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
             </div>
           </div>
         </div>
@@ -227,14 +230,14 @@
         <div class="team-column col-lg-4 col-md-6">
           <div class="card team-card">
             <div class="card-body">
-              <img src="Team-pictures/Toheed.png" alt="lady-profile " class="team-picture">
-              <h2>Toheed Haider<span class="badge badge-team"><i class="checkicon far fa-check-circle"></i></span></h2>
-              <h5>Marketing specialist</h5>
-              <p class="gray-paragraph">Certified Marketing Specialist. I oversee branding, advertising, and promotional campaigns.</p>
+              <img src="Team-pictures/Khadija.png" alt="lady-profile " class="team-picture">
+              <h2>Khadija Khalid</h2>
+              <h5>Customer service</h5>
+              <p class="gray-paragraph">I should have detailed knowledge
+                of all of your products and procedures and how to solve problems with all.</p>
             </div>
             <div class="card-footer bg-info">
-              <a href="https://www.facebook.com/Hashmi021"><i class="fab fasocialIcons fa-facebook"></i></a>
-              <a href="mailto:Toheedhaider440@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
+              <a href="mailto:carefashion68@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
             </div>
           </div>
         </div>
@@ -242,17 +245,14 @@
         <div class="team-column col-lg-4 col-md-6">
           <div class="card team-card">
             <div class="card-body">
-              <img src="Team-pictures/Zubair.png" alt="lady-profile " class="team-picture">
-              <h2>Zabair Ghoss<span class="badge badge-team"><i class="checkicon far fa-check-circle"></i></span></h2>
+              <img src="Team-pictures/Sameer.png" alt="lady-profile " class="team-picture">
+              <h2>Muhammad Sameer</h2>
               <h5>Sales Manager</h5>
-              <p class="gray-paragraph">Experienced Sales Manager. I usually recruit, build, steer the business and nurture a team, .</p>
+              <p class="gray-paragraph">. Whether you sell your products in one place or a dozen,
+                the channel lead takes responsibility for making sure all sales</p>
             </div>
             <div class="card-footer bg-info">
-              <a href="https://www.facebook.com/chzubair.ghous"><i class="fab fasocialIcons fa-facebook"></i></a>
-              <a href="https://twitter.com/czubair307"><i class="fab fasocialIcons fa-twitter"></i></a>
-              <a href="https://www.instagram.com/chzubairghous"><i class="fab fasocialIcons fa-instagram"></i></a>
-              <a href="http://www.linkedin.com/in/zabair-ghoss1"><i class="fab fasocialIcons fa-linkedin"></i></a>
-              <a href="mailto:czubair307@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
+              <a href="mailto:carefashion68@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
             </div>
           </div>
         </div>
@@ -260,14 +260,13 @@
         <div class="team-column col-lg-4 col-md-6">
           <div class="card team-card">
             <div class="card-body">
-              <img src="Team-pictures/Sheroz.png" alt="lady-profile " class="team-picture">
-              <h2>Sheroz Ali<span class="badge badge-team"><i class="checkicon far fa-check-circle"></i></span></h2>
-              <h5>Product Manager</h5>
-              <p class="gray-paragraph">I am Product Manager. My job is to clearly articulate the business value to the product team.</p>
+              <img src="Team-pictures/Talha.png" alt="lady-profile " class="team-picture">
+              <h2>Talha Ijaz</h2>
+              <h5>Digital marketer</h5>
+              <p class="gray-paragraph"> My role is to manage your online presence, from social media accounts to Google ads to maintaining a blog</p>
             </div>
             <div class="card-footer bg-info">
-              <a href="https://www.facebook.com/shehroz.shahroz.9"><i class="fab fasocialIcons fa-facebook"></i></a>
-              <a href="mailto:shahroznasir112233@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
+              <a href="mailto:carefashion68@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
             </div>
           </div>
         </div>
@@ -275,15 +274,13 @@
         <div class="team-column col-lg-4 col-md-6">
           <div class="card team-card">
             <div class="card-body">
-              <img src="Team-pictures/Anas.png" alt="lady-profile " class="team-picture">
-              <h2>Anas Ali<span class="badge badge-team"><i class="checkicon far fa-check-circle"></i></span></h2>
-              <h5>Business analyst</h5>
-              <p class="gray-paragraph">I have been teaching in Government College Sheikhpura. I have wast experience in teaching of 10 years.</p>
+              <img src="Team-pictures/Rehman.png" alt="lady-profile " class="team-picture">
+              <h2>Abdul Rehman</h2>
+              <h5>Accountant</h5>
+              <p class="gray-paragraph">.You need to at least break even with your costs to stay afloat, but turning a profit is even better</p>
             </div>
             <div class="card-footer bg-info">
-              <a href="https://www.facebook.com/profile.php?id=100009458006628"><i class="fab fasocialIcons fa-facebook"></i></a>
-              <a href="https://instagram.com/__anas__ali_?igshid=1uax9jf8cb8eg"><i class="fab fasocialIcons fa-instagram"></i></a>
-              <a href="mailto:anas70643@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
+              <a href="mailto:carefashion68@gmail.com"><i class="far fasocialIcons fa-envelope"></i></a>
             </div>
           </div>
         </div>
